--- a/references.bib
+++ b/references.bib
@@ -230,3 +230,61 @@
   year={1987},
   publisher={Universities press}
 }
+
+@article{pedregosa2011scikit,
+  title={Scikit-learn: Machine learning in Python},
+  author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
+  journal={the Journal of machine Learning research},
+  volume={12},
+  pages={2825--2830},
+  year={2011},
+  publisher={JMLR. org}
+}
+
+@inproceedings{serbes2018automated,
+  title={An automated lung sound preprocessing and classification system based onspectral analysis methods},
+  author={Serbes, Gorkem and Ulukaya, Sezer and Kahya, Yasemin P},
+  booktitle={Precision Medicine Powered by pHealth and Connected Health: ICBHI 2017, Thessaloniki, Greece, 18-21 November 2017},
+  pages={45--49},
+  year={2018},
+  organization={Springer}
+}
+
+@article{por2019nyquist,
+  title={Nyquist--Shannon sampling theorem},
+  author={Por, Emiel and van Kooten, Maaike and Sarkovic, Vanja},
+  journal={Leiden University},
+  volume={1},
+  number={1},
+  year={2019}
+}
+
+@article{paszke2019pytorch,
+  title={Pytorch: An imperative style, high-performance deep learning library},
+  author={Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  year={2019}
+}
+
+@article{radford2015unsupervised,
+  title={Unsupervised representation learning with deep convolutional generative adversarial networks},
+  author={Radford, Alec and Metz, Luke and Chintala, Soumith},
+  journal={arXiv preprint arXiv:1511.06434},
+  year={2015}
+}
+
+@article{kingma2013auto,
+  title={Auto-encoding variational bayes},
+  author={Kingma, Diederik P and Welling, Max},
+  journal={arXiv preprint arXiv:1312.6114},
+  year={2013}
+}
+
+@misc{githubMADE,
+	author = {Andrej Karpathy},
+	title = {{G}it{H}ub - karpathy/pytorch-made: {M}{A}{D}{E} ({M}asked {A}utoencoder {D}ensity {E}stimation) implementation in {P}y{T}orch --- github.com},
+	howpublished = {\url{https://github.com/karpathy/pytorch-made}},
+	year = {2018},
+	note = {[Accessed 05-12-2023]},
+}
