--- a/references.bib
+++ b/references.bib
@@ -288,3 +288,11 @@
 	year = {2018},
 	note = {[Accessed 05-12-2023]},
 }
+
+@inproceedings{akiba2019optuna,
+  title={Optuna: A next-generation hyperparameter optimization framework},
+  author={Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
+  booktitle={Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
+  pages={2623--2631},
+  year={2019}
+}
